--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,72 @@ output:
     keep_md: true
 ---
 
+```{r}
+library(ggplot2)
+library(scales)
+library(Hmisc)
+```
 
 ## Loading and preprocessing the data
-
-
+```{r data1}
+head(data)
+data$interval <- strptime(gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", data$interval), format='%H:%M')
+```
 
 ## What is mean total number of steps taken per day?
+```{r data3}
+stepsByDay <- tapply(data$steps, data$date, sum, na.rm=TRUE)
+```
+1. Histogram
 
+```{r data4}
+qplot(stepsByDay, xlab='Total steps per day', ylab='Frequency using binwith 500', binwidth=500)
+```
+2. MEAN AND TOTAL STEPS
 
+```{r data5}
+stepsByDayMean <- mean(stepsByDay)
+stepsByDayMedian <- median(stepsByDay)
+```
 
 ## What is the average daily activity pattern?
+```{r data6}
+averageStepsPerTimeBlock <- aggregate(x=list(meanSteps=data$steps), by=list(interval=data$interval), FUN=mean, na.rm=TRUE)
 
+ggplot(data=averageStepsPerTimeBlock, aes(x=interval, y=meanSteps)) +
+    geom_line() +
+    xlab("5-minute interval") +
+    ylab("average number of steps taken") 
+    
+mostSteps <- which.max(averageStepsPerTimeBlock$meanSteps)
+timeMostSteps <-  gsub("([0-9]{1,2})([0-9]{2})", "\\1:\\2", averageStepsPerTimeBlock[mostSteps,'interval'])    
+```
 
 
 ## Imputing missing values
+```{r data6}
+numMissingValues <- length(which(is.na(data$steps)))
 
+activityDataImputed <- data
+activityDataImputed$steps <- impute(data$steps, fun=mean)
+
+stepsByDayImputed <- tapply(activityDataImputed$steps, activityDataImputed$date, sum)
+qplot(stepsByDayImputed, xlab='Total steps per day (Imputed)', ylab='Frequency using binwith 500', binwidth=500)
+
+stepsByDayMeanImputed <- mean(stepsByDayImputed)
+stepsByDayMedianImputed <- median(stepsByDayImputed)
+```
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+```{r data7}
+activityDataImputed$dateType <-  ifelse(as.POSIXlt(activityDataImputed$date)$wday %in% c(0,6), 'weekend', 'weekday')
+
+averagedActivityDataImputed <- aggregate(steps ~ interval + dateType, data=activityDataImputed, mean)
+ggplot(averagedActivityDataImputed, aes(interval, steps)) + 
+    geom_line() + 
+    facet_grid(dateType ~ .) +
+    xlab("5-minute interval") + 
+    ylab("avarage number of steps")
+```
